--- a/sites_coordinates.ipynb
+++ b/sites_coordinates.ipynb
@@ -53,8 +53,7 @@
     " 'dwe_knauber_2016',\n",
     " 'dwe_mensing_2016']\n",
     "\n",
-    "df_sites_weather = df_sites[df_sites.customer.isin(selected_customers)]\n",
-    "     "
+    "df_sites_weather = df_sites[df_sites.customer.isin(selected_customers)]"
    ]
   },
   {
@@ -1010,7 +1009,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -1023,7 +1024,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -1034,5 +1035,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
